event, marker timers + notifications / UI improvements

--- a/src/HnHMapperServer.Web/Components/App.razor
+++ b/src/HnHMapperServer.Web/Components/App.razor
@@ -23,6 +23,7 @@
     <script src="lib/leaflet/1.9.4/leaflet.js"></script>
     <script src="lib/leaflet-plugins/rotatedmarker/0.2.0/leaflet.rotatedMarker.min.js"></script>
     <script src="lib/leaflet-plugins/marker-slideto/latest/L.Marker.SlideTo.js"></script>
+    <script src="js/notification-center.js"></script>
 </body>
 
 </html>
