--- a/src/HnHMapperServer.Web/Components/Layout/MainLayout.razor
+++ b/src/HnHMapperServer.Web/Components/Layout/MainLayout.razor
@@ -26,6 +26,9 @@
                 <!-- Tenant Selector (only show if user has multiple tenants) -->
                 <TenantSelectorDropdown />
 
+                <!-- Notification Center -->
+                <NotificationCenter />
+
                 <MudButton StartIcon="@Icons.Material.Filled.Home"
                            Color="Color.Inherit"
                            Href="/">
