--- a/src/HnHMapperServer.Web/Components/Map/MapView.razor
+++ b/src/HnHMapperServer.Web/Components/Map/MapView.razor
@@ -15,7 +15,8 @@
     [Parameter] public EventCallback<(int x, int y, int z)> OnMapZoomed { get; set; }
     [Parameter] public EventCallback<(int gridX, int gridY, int screenX, int screenY)> OnContextMenu { get; set; }
     [Parameter] public EventCallback<int> OnMarkerClicked { get; set; }
-    [Parameter] public EventCallback<int> OnMarkerContextMenu { get; set; }
+    [Parameter] public EventCallback<(int markerId, int screenX, int screenY)> OnMarkerContextMenu { get; set; }
+    [Parameter] public EventCallback<(int customMarkerId, int screenX, int screenY)> OnCustomMarkerContextMenu { get; set; }
     [Parameter] public EventCallback<(int mapId, int coordX, int coordY, int x, int y, int screenX, int screenY)> OnMapRightClick { get; set; }
     [Parameter] public EventCallback<bool> OnMapInitialized { get; set; }
     [Parameter] public EventCallback<int> OnMapChanged { get; set; }
@@ -335,9 +336,15 @@
     }
 
     [JSInvokable]
-    public async Task JsOnMarkerContextMenu(int markerId)
+    public async Task JsOnMarkerContextMenu(int markerId, int screenX, int screenY)
     {
-        await OnMarkerContextMenu.InvokeAsync(markerId);
+        await OnMarkerContextMenu.InvokeAsync((markerId, screenX, screenY));
+    }
+
+    [JSInvokable]
+    public async Task JsOnCustomMarkerContextMenu(int customMarkerId, int screenX, int screenY)
+    {
+        await OnCustomMarkerContextMenu.InvokeAsync((customMarkerId, screenX, screenY));
     }
 
     [JSInvokable]
